// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateContract: reducer compile contract on failure 1`] = `
Object {
  "abi": undefined,
  "contract": "",
  "contractCompileErrors": "Unable to compile contract: [object Object]",
  "contractName": undefined,
  "createDisabled": true,
  "error": Object {
    "error": "\\"src\\" (line 1, column 1):
unexpected 'a'
expecting \\"pragma\\", \\"import\\", \\"contract\\", \\"library\\" or end of input",
  },
  "filename": undefined,
  "isOpen": true,
  "response": "Error Uploading Contract...: [object Object]",
  "toster": false,
  "tosterMessage": "",
  "username": "",
}
`;

exports[`CreateContract: reducer compile contract on request 1`] = `
Object {
  "abi": undefined,
  "contract": "",
  "contractCompileErrors": undefined,
  "contractName": undefined,
  "createDisabled": true,
  "filename": undefined,
  "isOpen": true,
  "response": "Uploading Contract...",
  "toster": false,
  "tosterMessage": "",
  "username": "",
}
`;

exports[`CreateContract: reducer compile contract on success 1`] = `
Object {
  "abi": Object {
    "src": Object {
      "constr": Object {
        "_greeting": Object {
          "dynamic": true,
          "index": 0,
          "type": "String",
        },
      },
      "funcs": Object {
        "greet": Object {
          "args": Object {
            "_greeting": Object {
              "dynamic": true,
              "index": 0,
              "type": "String",
            },
          },
          "vals": Object {
            "#0": Object {
              "dynamic": true,
              "index": 0,
              "type": "String",
            },
          },
        },
      },
      "types": Object {
        "GreeterC": Object {
          "bytes": 0,
          "type": "Contract",
        },
      },
      "vars": Object {
        "greeting": Object {
          "atBytes": 0,
          "dynamic": true,
          "public": false,
          "type": "String",
        },
      },
    },
  },
  "contract": "",
  "contractCompileErrors": undefined,
  "contractName": "funcs",
  "createDisabled": false,
  "filename": undefined,
  "isOpen": true,
  "response": "Status: Upload Contract",
  "toster": false,
  "tosterMessage": "",
  "username": "",
}
`;

exports[`CreateContract: reducer contract close modal 1`] = `
Object {
  "abi": undefined,
  "contract": "",
  "contractCompileErrors": undefined,
  "contractName": undefined,
  "createDisabled": true,
  "filename": undefined,
  "isOpen": false,
  "response": "Status: Upload Contract",
  "toster": false,
  "tosterMessage": "",
  "username": "",
}
`;

exports[`CreateContract: reducer contract name change 1`] = `
Object {
  "abi": undefined,
  "contract": "",
  "contractCompileErrors": undefined,
  "contractName": "GreeterC",
  "createDisabled": true,
  "filename": undefined,
  "isOpen": false,
  "response": "Status: Upload Contract",
  "toster": false,
  "tosterMessage": "",
  "username": "",
}
`;

exports[`CreateContract: reducer contract open modal 1`] = `
Object {
  "abi": "",
  "contract": "",
  "contractName": "",
  "createDisabled": true,
  "filename": "",
  "isOpen": true,
  "response": "Status: Upload Contract",
  "username": "",
}
`;

exports[`CreateContract: reducer contract source change 1`] = `
Object {
  "abi": undefined,
  "contract": "contract GreeterC {↵    /* Define variable greeting of the type string */↵    string greeting;↵↵    /* This runs when the contract is executed */↵    function GreeterC(string _greeting) public {↵        greeting = _greeting;↵    }↵↵    /* Main function */↵    function greet(string _greeting) constant returns (string) {↵        return greeting;↵    }↵}↵",
  "contractCompileErrors": undefined,
  "contractName": undefined,
  "createDisabled": true,
  "filename": undefined,
  "isOpen": false,
  "response": "Status: Upload Contract",
  "toster": false,
  "tosterMessage": "",
  "username": "",
}
`;

exports[`CreateContract: reducer create contract on failure 1`] = `
Object {
  "abi": undefined,
  "contract": "",
  "contractCompileErrors": undefined,
  "contractName": undefined,
  "createDisabled": true,
  "error": "error",
  "filename": undefined,
  "isOpen": true,
  "isToasts": true,
  "response": "Error Uploading Contract...: error",
  "toastsMessage": "Contract creation failed",
  "toster": false,
  "tosterMessage": "",
  "username": "",
}
`;

exports[`CreateContract: reducer create contract on request 1`] = `
Object {
  "abi": undefined,
  "contract": "",
  "contractCompileErrors": undefined,
  "contractName": undefined,
  "createDisabled": true,
  "filename": undefined,
  "isOpen": true,
  "response": "Uploading Contract...",
  "toster": false,
  "tosterMessage": "",
  "username": "",
}
`;

exports[`CreateContract: reducer create contract on success 1`] = `
Object {
  "abi": undefined,
  "contract": "",
  "contractCompileErrors": undefined,
  "contractName": undefined,
  "createDisabled": true,
  "filename": undefined,
  "isOpen": false,
  "isToasts": true,
  "response": "Upload Success: [object Object]",
  "toastsMessage": "Contract Created",
  "toster": false,
  "tosterMessage": "",
  "username": "",
}
`;

exports[`CreateContract: reducer create contract on success without status 1`] = `
Object {
  "abi": undefined,
  "contract": "",
  "contractCompileErrors": undefined,
  "contractName": undefined,
  "createDisabled": true,
  "filename": undefined,
  "isOpen": false,
  "isToasts": true,
  "response": "Upload Success: [object Object]",
  "toastsMessage": Object {},
  "toster": false,
  "tosterMessage": "",
  "username": "",
}
`;

exports[`CreateContract: reducer reset error 1`] = `
Object {
  "abi": undefined,
  "contract": "",
  "contractCompileErrors": undefined,
  "contractName": undefined,
  "createDisabled": true,
  "filename": undefined,
  "isOpen": false,
  "isToasts": null,
  "response": "Status: Upload Contract",
  "toastsMessage": null,
  "toster": false,
  "tosterMessage": "",
  "username": "",
}
`;

exports[`CreateContract: reducer set initial state 1`] = `
Object {
  "abi": undefined,
  "contract": "",
  "contractCompileErrors": undefined,
  "contractName": undefined,
  "createDisabled": true,
  "filename": undefined,
  "isOpen": false,
  "response": "Status: Upload Contract",
  "solidvm": true,
  "toster": false,
  "tosterMessage": "",
  "username": "",
}
`;

exports[`CreateContract: reducer update toast 1`] = `
Object {
  "abi": undefined,
  "contract": "",
  "contractCompileErrors": undefined,
  "contractName": undefined,
  "createDisabled": true,
  "filename": undefined,
  "isOpen": false,
  "isToasts": false,
  "response": "Status: Upload Contract",
  "toastsMessage": "",
  "toster": false,
  "tosterMessage": "",
  "username": "",
}
`;

exports[`CreateContract: reducer username change 1`] = `
Object {
  "abi": undefined,
  "contract": "",
  "contractCompileErrors": undefined,
  "contractName": undefined,
  "createDisabled": true,
  "filename": undefined,
  "isOpen": false,
  "response": "Status: Upload Contract",
  "toster": false,
  "tosterMessage": "",
  "username": "abc",
}
`;
